--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "todoapp",
+  "name": "web-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js -e js,hbs"
   },
-  "author": "Guillermo",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "dotenv": "^8.2.0",
-    "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "mongodb": "^3.6.6",
+    "hbs": "^4.1.2"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.7"
   }
 }
